# sp_event_generator

./: .gitignore  README.md  gitignore  main.py
cpp/: CMakeLists.txt  build.sh
cpp/include/: rms_types.h
cpp/src/: bindings.cpp  forecast.cpp  indicators.cpp  multi_path_forecaster.cpp  samplers.cpp
data/: data_loader.py  data_store.py  features.py
density/: analyze_density_summaries.py  density.py  density_handler.py  indicator.py
mc/: cpp_adapter.py  transition_model.py
strategy/: live_runner.py  strategy_handler.py  strategy_tester.py
tests/: diagnose_density_xbins.py  diagnose_multi_path.py  diagnose_tune_xvalues.py  equivalence_test.py  indicator_check.py  strategy_sanity_check.py  test.py  test_equivalence.py  test_exit_global_isolation.py  test_multi_path_forecaster.py
tools/: date_range.py  generate_static_ticker_lists.py  mpi_utils.py  tickers.py
tools/data/ticker_lists/: sp500_full.csv  sweden_largecap.csv
tune/: indicator.py  tune_handler.py  tuner.py
